@@ -154,8 +154,8 @@ public class PhotonvisionAprilTagTelemetry {
 
         widget.connectionStatus.setBoolean(isConnected);
 
-        if (!results.isEmpty() && results.getFirst().hasTargets()) {
-          var bestTarget = results.getFirst().getBestTarget();
+        if (!results.isEmpty() && results.get(0).hasTargets()) {
+          var bestTarget = results.get(0).getBestTarget();
           var camToTarget = bestTarget.getBestCameraToTarget();
 
           widget.poseXEntry.setDouble(truncate(camToTarget.getX(), 3));
@@ -263,8 +263,8 @@ public class PhotonvisionAprilTagTelemetry {
 
       if (camera != null) {
         var results = camera.getAllUnreadResults();
-        if (!results.isEmpty() && results.getFirst().hasTargets()) {
-          for (PhotonTrackedTarget tag : results.getFirst().getTargets()) {
+        if (!results.isEmpty() && results.get(0).hasTargets()) {
+          for (PhotonTrackedTarget tag : results.get(0).getTargets()) {
             Optional<Pose3d> tagPoseOptional =
                 fieldLayout.getTagPose(tag.getFiducialId());
 
